All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Added
- [API_PARSER] [CISCO_UMBRELLA-MANAGED-ORG] New collector
### Fixed
- [SYSTEM] [NODE] Uniformize editable fields on API and GUI


## [2.18.0] - 2024-12-18
### Added
- [COMMANDS] New command to update reputation context feeds
### Fixed
- [MONITOR] Avoid wrong node state during monitoring operations
- [API_PARSER] [WAF_CLOUDFLARE] Work with dynamic fields on query
- [API_PARSER] [CROWDSTRIKE] Correctly return an error when test failed on GUI
- [API_PARSER] [CROWDSTRIKE] Don't consider log range to be collected on error
- [API_PARSER] [PROOFPOINT_CASB] Prevent cursor stagnation when no events are received during 24H
- [API_PARSER] [PROOFPOINT_CASB] Retrieve events each 2 minutes to prevent > 1000 queries/day
- [APPLICATIONS] [SERVERS] Correct inability to create 2 servers with the same target:port couple
### Changed
- [API_PARSER] [CYBEREASON] Refacto code and avoid API errors by getting bulks of 1000 logs
- [DEPENDENCIES]
  - djongo 1.3.6.post5 -> 1.3.7


## [2.17.1] - 2024-12-05
### Fixed
- [WORKFLOW] [MODELS] Revert deleted imports


## [2.17.0] - 2024-11-25
### Added
- [API_PARSER] [CORTEX_XDR] Add advanced token feature
### Changed
- [API_PARSER] [CORTEX_XDR] Improve logging and code quality
- [API_PARSER] [CISCO_UMBRELLA] Add the list of users in logs
### Fixed
- [API_PARSER] [CISCO_UMBRELLA] Correctly store and refresh the active Oauth2 token


## [2.16.2] - 2024-11-13
### Fixed
- [NETWORK] Set dynamic resolution for interfaces specified in NATs


## [2.16.1] - 2024-11-08
### Fixed
- [NETWORK] Don't use link-local IPv6 addresses when NATing on IPv6-enabled interfaces


## [2.16.0] - 2024-11-04
### Added
- [LOG_FORWARDER] [REDIS] Support for queues, sets, publish and streams modes for log insertion